--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+
 classifiers/__pycache__/
 clustering/__pycache__/
 collectors/__pycache__/
 pipeline/__pycache__/
 results/
 summarization/__pycache__/
+venv/
